--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -13,6 +13,8 @@ $gd_gideon_blue: #3F6DE1;
 $width: 280px;
 
 .gd-date-picker {
+    background-color: white;
+
     &-inner-container {
       display: flex;
       flex-direction: column;
@@ -267,15 +269,11 @@ $width: 280px;
 
     .gd-submit-date-button {
         width: 100%;
-        height: 42px;
-        border-top: 2px solid $gd_gideon_blue;
-        border-bottom-left-radius: $messageBorderRadius - 2px;
-        border-bottom-right-radius: $messageBorderRadius - 2px;
-        border-bottom: 0;
-        border-left: 0;
-        border-right: 0;
+        height: 48px;
         font-size: 14px;
         font-weight: bold;
+        margin-top: 15px;
+        border-radius: 3px;
     }
 
     .gd-submit-date-button:hover {
