--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1505,7 +1505,7 @@
             right: 0;
 
             &.hidden {
-                visibility: hidden;
+                display: none;
             }
         }
 
