--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -787,6 +787,10 @@
             color: white;
           }
         }
+
+        .address-apartment-container {
+            margin-top: 18px;
+        }
       }
 
     .required {
