--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -70,6 +70,7 @@ $gd_gideon_blue: #3F6DE1;
 
 .uploaded-files-container {
   padding: 20px 0px 0px;
+  margin-bottom: 18px;
 }
 
 .uploaded-file-name-readonly {
