--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -350,8 +350,15 @@ $width: 280px;
     }
 
     .gd-selected-date-container {
-        height: 54px;
+        // height: 54px;
         background-color: white;
+        padding: 10px 30px 0;
+        font-size: 18px;
+        color: #262626;
+        text-align: left;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 19px;
     }
 
     .react-datepicker {
