adjusted color of file link to match (black)

--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -79,6 +79,11 @@ $gd_gideon_blue: #3F6DE1;
 
 .uploaded-file-name-readonly-link {
   margin-top: 20px;
+  color: #262626;
+}
+
+a:link {
+  color: #262626;
 }
 
 .uploaded-files-text {
