Minor fixes brought up

--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -611,6 +611,7 @@ $width: 280px;
 
 .date-picker-node-content-body {
     // position: relative;
+    margin-bottom: 20px;
 }
 
 .date-picker-popup-outer-container {
