--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -83,6 +83,10 @@ $gd_gideon_blue: #3F6DE1;
   color: #262626;
 }
 
+.uploaded-file-name-readonly-link a:link {
+  color: #262626;
+}
+
 a:link {
   color: #262626;
 }
