--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -5,6 +5,7 @@
 @import "gideon";
 @import "github-markdown.scss";
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap'); // Lato font
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); // Poppins font
 
 /* reset */
 
@@ -187,6 +188,27 @@
     .wc-time {
         color: $c_textLight;
         margin-bottom: 10px;
+    }
+
+    .wc-date-header {
+        display: flex;
+        align-items: center;
+        margin-bottom: 24px;
+    }
+
+    .wc-date-header-line {
+        border-top: 1px solid #B5B5B5;
+        width: 100%;
+    }
+
+    .wc-date-header-text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 21px;        
+        color: #B5B5B5;
+        margin: 0 11px;
     }
 
     .wc-message-groups {
