--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -473,8 +473,8 @@
             &__message {
                 font-size: 14px;
                 font-weight: 450;
-                padding: 0 20px;
-                margin: 20px 0;
+                padding: 0;
+                margin-bottom: 20px;
                 line-height: 1.3em;
                 // margin: 10px 10px 20px;
             }
@@ -488,7 +488,6 @@
             }
 
             &__buttons {
-                margin-bottom: 20px;
                 margin-top:0;
 
                 ul {
@@ -509,8 +508,6 @@
                         overflow-wrap: break-word;
                         text-align: right;
                         padding: 10px;
-                        margin-left: 20px;
-                        margin-right: 20px;
                         margin-bottom: 10px;
                         text-align: center;
                         box-shadow: 2px 2px 4px 0px $c_shadow;
@@ -624,7 +621,7 @@
     .wc-message-bot-name {
       color: $c05;
       float: left;
-      margin-left: 33px;
+      margin-left: 47px;
       margin-bottom: 4px;
       font-weight: normal;
       font-style: normal;
@@ -635,8 +632,8 @@
     }
 
     .wc-message-avatar{
-        width: 25px;
-        height: 25px;
+        width: 38px;
+        height: 38px;
         min-width: 25px;
         border-radius: 22px;
         display: flex;
@@ -1211,7 +1208,6 @@
         border-top: 5px solid #3F6DE1;
         border-top-right-radius: 3px;
         border-top-left-radius: 3px;
-        padding: 10px 30px 30px; 
     }
 
     .wc-message-from-me.wc-message-address {
@@ -1286,7 +1282,6 @@
     border-top: 5px solid white;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
-    padding: 10px 30px 30px; 
 }
 
 .wc-message-from-me-blank.wc-message-address {
