--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -22,7 +22,7 @@ $gd_gideon_blue: #3F6DE1;
 
 .file-upload-box {
   flex: 1;
-  margin: 30px 0px 0px;
+  margin: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
