--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -3,6 +3,7 @@
 @import "media-queries";
 
 $gd_gideon_blue: #3F6DE1;
+$gd_gideon_black: #262626;
 
 .react-datepicker__header--time {
     padding-bottom: 8px;
@@ -40,7 +41,7 @@ $width: 280px;
       margin-bottom: 10px;
       height: 20px;
       span {
-        color: $gd_gideon_blue;
+        color: $gd_gideon_black;
         height: 1.2em;
         line-height: 20px;
       }
@@ -93,7 +94,7 @@ $width: 280px;
       margin-bottom: 10px;
 
       span {
-        color: $gd_gideon_blue;
+        color: $gd_gideon_black;
         margin-left: 10px;
         margin-right: 10px;
       }
@@ -164,7 +165,7 @@ $width: 280px;
 
     .gd-date-picker-next, .gd-date-picker-prev {
       background-color: white;
-      color: $gd_gideon_blue;
+      color: $gd_gideon_black;
       border-style: none;
       margin-right: auto;
       margin-left: auto;
@@ -315,7 +316,7 @@ $width: 280px;
             font-weight: bold;
             position: absolute;
             display: block;
-            color: black;
+            color: $gd_gideon_black;
         }
 
         .gd-header-schedule-meeting {
