--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -23,6 +23,7 @@ $gideon-grey-two:#f6f7f8;
 $gideon-semidark-grey: #979797;
 $gideon-silver-two: #c3ccd0;
 $gideon-light-border-color: #e6eaee;
+$gideon-black: #262626;
 
 
 // SIZES
