--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -3,7 +3,6 @@
 @import "media-queries";
 
 $gd_gideon_blue: #3F6DE1;
-$gd_gideon_black: #262626;
 
 .react-datepicker__header--time {
     padding-bottom: 8px;
@@ -41,7 +40,7 @@ $width: 280px;
       margin-bottom: 10px;
       height: 20px;
       span {
-        color: $gd_gideon_black;
+        color: $gd_gideon_blue;
         height: 1.2em;
         line-height: 20px;
       }
@@ -94,7 +93,7 @@ $width: 280px;
       margin-bottom: 10px;
 
       span {
-        color: $gd_gideon_black;
+        color: $gd_gideon_blue;
         margin-left: 10px;
         margin-right: 10px;
       }
@@ -165,7 +164,7 @@ $width: 280px;
 
     .gd-date-picker-next, .gd-date-picker-prev {
       background-color: white;
-      color: $gd_gideon_black;
+      color: $gd_gideon_blue;
       border-style: none;
       margin-right: auto;
       margin-left: auto;
@@ -316,7 +315,7 @@ $width: 280px;
             font-weight: bold;
             position: absolute;
             display: block;
-            color: $gd_gideon_black;
+            color: black;
         }
 
         .gd-header-schedule-meeting {
@@ -353,6 +352,7 @@ $width: 280px;
     .gd-selected-date-container {
         // height: 54px;
         background-color: white;
+        padding: 10px 30px 0;
         font-size: 18px;
         color: #262626;
         text-align: left;
@@ -627,4 +627,8 @@ $width: 280px;
     position: fixed;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.12);
     border-radius: 3px;
+}
+
+.date-picker-node-content {
+    padding: 18px;
 }
