--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -22,7 +22,7 @@ $gd_gideon_blue: #3F6DE1;
 
 .file-upload-box {
   flex: 1;
-  margin: 0;
+  margin: 30px 0px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -147,7 +147,10 @@ a:link {
            /* Gideon / White */
         
            background: #FEFEFE;
+          /* Gideon / Box shadow */
 
+          box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+          border-radius: 3px 3px 0px 3px;
           background-color: transparent;
           border: 1px solid $gd_gideon_blue;
           padding: 0px;
