--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -178,6 +178,7 @@
     .wc-chatbot-content-left {
         flex: 1;
         margin-top: $headerTotalHeight;
+        background-color: #F9F9F9;
     }
 
     .wc-chatbot-content-right {
@@ -621,7 +622,7 @@
     .wc-message-bot-name {
       color: $c05;
       float: left;
-      margin-left: 47px;
+      margin-left: 33px;
       margin-bottom: 4px;
       font-weight: normal;
       font-style: normal;
@@ -632,15 +633,15 @@
     }
 
     .wc-message-avatar{
-        width: 38px;
-        height: 38px;
+        width: 25px;
+        height: 25px;
         min-width: 25px;
         border-radius: 22px;
         display: flex;
         align-items: center;
         justify-content: center;
         color: #f6f7f8;
-        margin: auto 0 10px 0;
+        margin: auto 0 16px 0;
         background: #3F6DE1 !important;
     }
 
