Node widths are now 31% of screen size when bot is full screen

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1605,6 +1605,10 @@
         fill: white;
     }
 
+    .wc-node-fullscreen {
+        width: $gideon-node-width-fullscreen !important;
+    }
+
 /* animation */
 
     .wc-typing {
