--- a/src/scss/gideon.scss
+++ b/src/scss/gideon.scss
@@ -28,6 +28,7 @@ $gideon-light-border-color: #e6eaee;
 // SIZES
 
 $gideon-node-width: 66%;
+$gideon-node-width-fullscreen: 48%; // 48% of the full-screen bot container (which is 68% according to $gideon-node-width) = ~31% of screen width
 
 
 // EFFECTS
