multiple choice back to non-node card + scheduler next button looks like a button

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1352,6 +1352,10 @@
         width: $gideon-node-width
       }
 
+    .wc-message-imBack {
+      margin-left: auto;
+    }
+
     .wc-message-handoff {
       margin-left: auto;
     }
