Left side of full screen bot now has drop shadow

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -225,6 +225,7 @@
 
     .wc-message-groups-fullscreen {
         max-width: 100%;
+        margin-left: 10px;
     }
 
     .wc-message-group-content {
@@ -1733,6 +1734,7 @@
     .wc-chatbot-content-left-wrap {
         height: 100%;
         width: 100%;
+        box-shadow: 0px 3px 6px #00000029;
     }
 
     .wc-fullscreen-logo {
