multiple choice card back to normal again

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1351,6 +1351,10 @@
       width: $gideon-node-width
     }
 
+    .wc-message-imBack {
+        margin-left: auto;
+    }
+
     .wc-message-date {
         margin-left: auto;
         border: none;
