--- a/src/scss/includes/multiple-upload.scss
+++ b/src/scss/includes/multiple-upload.scss
@@ -62,3 +62,24 @@
     background-color: $c_brand;
     color: #ffffff;
   }
+
+  .wc-suggested-options-option {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 10px 20px;
+    border: 1px solid #3F6DE1;
+    border-radius: 3px;
+    color: black;
+    margin-bottom: 10px;
+    margin-left: auto;
+    width: fit-content;
+  }
+
+  .wc-suggested-options-option:hover {
+    background-color: #3F6DE1;
+    color: white;
+    cursor: pointer;
+  }
