--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -805,7 +805,7 @@
             padding: 5px 0px 0px 0px;
         }
 
-        .node {
+        .gideon__node {
             background-color: white;
             color: $gideon-black;
             padding: 8px 20px 20px 20px;
