unset min-width for date header text

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -210,6 +210,7 @@
         line-height: 21px;        
         color: #B5B5B5;
         margin: 0 11px;
+        min-width: unset;
     }
 
     .wc-message-groups {
