exclude disclaimer nodes from fullscreen width modifications

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -1616,7 +1616,7 @@
         fill: white;
     }
 
-    .wc-node-fullscreen {
+    .wc-node-fullscreen:not(.wc-message-disclaimer) {
         width: $gideon-node-width-fullscreen !important;
     }
 
