--- a/src/scss/includes/date-picker.scss
+++ b/src/scss/includes/date-picker.scss
@@ -174,35 +174,13 @@ $width: 280px;
       margin-bottom: 10px;
     }
 
-    .gd-date-picker-next, .gd-date-picker-prev {
-      background-color: $gd_gideon_blue;
-      color: white;
-      border-style: none;
-      margin-right: auto;
-      margin-left: auto;
-      outline: 0;
-      border-radius: 4px;
-      border: 1px solid #3F6DE1;
-      padding: 4px;
-    }
-
-    .gd-date-picker-next:hover:enabled, .gd-date-picker-prev:hover:enabled {
-      color: $gd_gideon_blue;
-      background-color: white;
-      border-color: #3F6DE1;
-    }
-
     .gd-date-picker-next {
+      margin-left: auto;
       margin-right: 10%;
     }
 
     .gd-date-picker-prev {
       margin-left: 10%;
-    }
-
-    .gd-date-picker-prev:disabled, .gd-date-picker-next:disabled {
-      color: #cccccc;
-      cursor: default;
     }
 
     .gd-date-picker-hours-back {
@@ -239,6 +217,19 @@ $width: 280px;
       flex-direction: row;
       margin-top: 10px;
       margin-bottom: 10px;
+
+      svg {
+        fill: $gd_gideon_blue;
+        height: 24px;
+        width: 24px;
+        border-radius: 4px;
+      }
+
+      svg:hover {
+        fill: white;
+        background-color: $gd_gideon_blue;
+        cursor: pointer;
+      }
     }
 
     &-navigation button {
