header and bot themes show

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -648,7 +648,7 @@
         justify-content: center;
         color: #f6f7f8;
         margin: auto 0 16px 0;
-        background: #3F6DE1 !important;
+        background: #3F6DE1;
     }
 
     .wc-message-avatar.blank{
