adjust space at the footer depending on whether or not the bot is fullscreen

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -242,7 +242,13 @@
         }
 
         &.no-console {
-            bottom: 0px;
+            bottom: 5%;
+        }
+
+        &-fullscreen {
+            &.no-console {
+                bottom: 96px;
+            }
         }
     }
 
