possible fix for uploaded file hyperlink styling

--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -76,6 +76,7 @@ $gd_gideon_blue: #3F6DE1;
 .uploaded-file-name-readonly {
   margin-top: 20px;
   color: #262626;
+  text-decoration: underline;
 }
 
 .uploaded-file-name-readonly-link {
