--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -230,12 +230,19 @@ a:link {
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: $gd_gideon_blue;
+  color: white;
+  background-color: $gd_gideon_blue;
   padding: 14px 0px;
   border: 1.5px solid $gd_gideon_blue;
   border-radius: 3px;
   cursor: pointer;
   margin-top: 20px;
+}
+
+.upload-skip:hover {
+  background-color: white;
+  border: 1.5px solid $gd_gideon_blue;
+  color: $gd_gideon_blue;
 }
 
 .uploaded-files {
