Show mobile optimized chatbot on mobile even if tthe bot is marked as fullscreen

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -179,6 +179,9 @@
         flex: 1;
         margin-top: $headerTotalHeight;
         background-color: #F9F9F9;
+        @include mobile {
+           flex: 0;
+        }
     }
 
     .wc-chatbot-content-right {
