--- a/src/scss/includes/file-upload.scss
+++ b/src/scss/includes/file-upload.scss
@@ -103,6 +103,7 @@ a:link {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 17px;
 }
 
 .uploaded-file-name {
