--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -268,6 +268,14 @@
         // float: right;
     }
 
+    .wc-non-fullscreen-last-message {
+        margin-bottom: 5% !important;
+    }
+
+    .wc-fullscreen-last-message {
+        margin-bottom: 96px !important;
+    }
+
     .wc-suggested-actions {
         background-color: #ffffff;
         bottom: $consoleHeight;
