--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -634,7 +634,7 @@
         animation: animationFrames 2s;
         animation-iteration-count: 1;
         clear: both;
-        margin-bottom: 5px;
+        margin-bottom: 12px;
         overflow: hidden;
         position: relative;
         /*transition: max-height 2s ease-in-out;*/
@@ -671,7 +671,7 @@
         align-items: center;
         justify-content: center;
         color: #f6f7f8;
-        margin: auto 0 16px 0;
+        margin: auto 0 6px 0;
         background: #3F6DE1;
     }
 
@@ -821,8 +821,8 @@
             margin-left: auto;
             border: none;
             width: $gideon-node-width;
-            margin-top: 50px;
-            margin-bottom: 50px;
+            margin-top: 40px;
+            margin-bottom: 40px;
         }
 
         .wc-message-content-node {
@@ -898,6 +898,10 @@
 
         .address-apartment-container {
             margin-top: 18px;
+        }
+
+        &-disclaimer {
+           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
         }
       }
 
